java/java-tests/testData/codeInsight/daemonCodeAnalyzer/semicolonHighlighting/SemicolonBeforeImport.java
package foo;

<error descr="Extra semicolons between import statements are not allowed">;</error>
import java.util.List;

class Foo {}